--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
 		"@tanstack/react-query": "^5.81.5",
 		"@types/node": "^24.0.10",
 		"axios": "^1.10.0",
+		"framer-motion": "^12.23.0",
+		"lucide-react": "^0.525.0",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"react-router-dom": "^7.6.3",
 		"vite-tsconfig-paths": "^5.1.4"
 	},
 	"devDependencies": {
