--- a/package.json
+++ b/package.json
@@ -8,16 +8,21 @@
 		"build": "tsc -b && vite build",
 		"format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,scss,html,md,yml,yaml}\"",
 		"lint": "eslint .",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"sass": "sass --watch ./src/style/main.scss:./src/compiled/css/index.css"
 	},
 	"dependencies": {
 		"@tanstack/react-query": "^5.81.5",
 		"@types/node": "^24.0.10",
 		"axios": "^1.10.0",
 		"framer-motion": "^12.23.0",
+		"i18next": "^25.3.2",
+		"i18next-browser-languagedetector": "^8.2.0",
+		"i18next-http-backend": "^3.0.2",
 		"lucide-react": "^0.525.0",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"react-i18next": "^15.6.0",
 		"react-router-dom": "^7.6.3",
 		"vite-tsconfig-paths": "^5.1.4"
 	},
@@ -31,6 +36,8 @@
 		"eslint-plugin-react-refresh": "^0.4.19",
 		"globals": "^15.15.0",
 		"prettier": "^3.6.2",
+		"sass": "^1.87.0",
+		"sass-embedded": "^1.87.0",
 		"typescript": "~5.7.2",
 		"typescript-eslint": "^8.24.1",
 		"vite": "^6.2.0"
