--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@types/node": "^24.0.10",
 		"axios": "^1.10.0",
 		"framer-motion": "^12.23.0",
+		"gsap": "^3.13.0",
 		"i18next": "^25.3.2",
 		"i18next-browser-languagedetector": "^8.2.0",
 		"i18next-http-backend": "^3.0.2",
