fix: shared offerCard component

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -11,7 +11,8 @@
 			"@utils/*": ["./utils/*"],
 			"@services/*": ["./services/*"],
 			"@data/*": ["../data/*"],
-			"@compiled/*": ["compiled/css/*"]
+			"@compiled/*": ["compiled/css/*"],
+			"@shared/*": ["shared/*"]
 		}
 	},
 	"exclude": ["node_modules"]
