--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"sass-embedded": "^1.87.0",
 		"typescript": "~5.7.2",
 		"typescript-eslint": "^8.24.1",
-		"vite": "^6.2.0"
+		"vite": "^6.2.0",
+		"vite-plugin-sitemap": "^0.8.2"
 	}
 }
