--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"react-dom": "^19.0.0",
 		"react-i18next": "^15.6.0",
 		"react-router-dom": "^7.6.3",
+		"vite-plugin-compression2": "^2.2.0",
 		"vite-tsconfig-paths": "^5.1.4"
 	},
 	"devDependencies": {
